--- a/Catalog.html
+++ b/Catalog.html
@@ -5,8 +5,7 @@
   <title>Магазин - Нёрдс</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link rel="stylesheet" href="css/normalize.css">
-  <link href="css/style.css" type="text/css" rel="stylesheet">
-  <!--<link href="css/style.min.css" type="text/css" rel="stylesheet"> -->
+  <link href="css/style.min.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
