--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Главная - Нёрдс</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="shortcut icon" href="img/favicon32x32.png" type="image/png">
+    <link rel="apple-touch-icon-precomposed" href="img/favicon152x152.png">
     <link rel="stylesheet" href="css/normalize.css">
     <link href="css/style.min.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
