--- a/catalog.html
+++ b/catalog.html
@@ -43,8 +43,8 @@
               <div class="scale">
                 <div class="bar"></div>
               </div>
-              <div class="toggle toggle-min"></div>
-              <div class="toggle toggle-max"></div>
+              <a href="#" class="toggle toggle-min" title="Минимальная"></a>
+              <a href="#" class="toggle toggle-max" title="Максимальная"></a>
             </div>
             <div class="price-controls">
               <label class="min-price">от<input name="min-price" type="text" value="0"></label>
@@ -64,7 +64,7 @@
             </li>
             <li class="filter-option">
               <label class="radio option">
-                <input class="radio-input" id="fix" type="radio" name="grid" value="fixed">
+                <input class="radio-input" type="radio" name="grid" value="fixed">
                 <span class="radio-box"></span>
                 <span class="radio-text">Фиксированная</span>
               </label>
@@ -206,15 +206,17 @@
     </section>
   </div>
 </main>
-<div class="address">
-  <div class="address-map">
-    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A3c80899cb7b8347d15ee8a216ebab2d39b49b4b6a5180ef7fcefa1043848b563&amp;width=100%25&amp;height=418&amp;lang=ru_RU&amp;scroll=true"></script>
-  </div>
-  <div class="address-container">
-    <h1 class="address-title">NЁRDS DESIGN STUDIO</h1>
-    <p class="address-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
-    <p class="address-phone">тел. +7 (812) 275-75-75</p>
-    <a href="#" class="button contacts-button">Напишите нам</a>
+<<div class="address">
+  <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A0da719b83099ced85a7360a81502c2350b32536cdaef0779f9d6f8efe23a999d&amp;source=constructor"
+          width="1440" height="416"></iframe>
+  <img src="img/map.jpg" width="1440" height="416" alt="Мы на карте">
+  <div class="map-container wrapper">
+    <div class="address-container">
+      <h1 class="address-title">NЁRDS DESIGN STUDIO</h1>
+      <p class="address-text">191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</p>
+      <p class="address-phone"><a class="phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
+      <a href="#" class="button contacts-button">Напишите нам</a>
+    </div>
   </div>
 </div>
 <div class="wrapper">
@@ -240,8 +242,9 @@
         <label class="modal-text" for="email">Ваш e-mail:
           <input class="modal-input modal-input-mail" type="email" name="email" id="email" placeholder="email@example.com">
         </label>
-        <p class="modal-text modal-text-comment">Текст письма:
-          <textarea class="modal-comment" name="comment" id="comment-field" rows="4" placeholder="В свободной форме"></textarea></p>
+        <label class="modal-text modal-text-comment" for="comment-field">Текст письма:
+          <textarea class="modal-comment" name="comment" id="comment-field" rows="4" placeholder="В свободной форме"></textarea>
+        </label>
         <button class="btn" type="submit">Отправить</button>
       </form>
     </div>
