--- a/catalog.html
+++ b/catalog.html
@@ -206,7 +206,7 @@
     </section>
   </div>
 </main>
-<<div class="address">
+<div class="address">
   <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A0da719b83099ced85a7360a81502c2350b32536cdaef0779f9d6f8efe23a999d&amp;source=constructor"
           width="1440" height="416"></iframe>
   <img src="img/map.jpg" width="1440" height="416" alt="Мы на карте">
